* FEA#8832 Replace 'hpaned' position attribute with 'group'
* BUG#9046 Do not copy covered element extra datas on parties if they are empy
* BUG#8956 Display quote number instead of contract number in error message of party erase wizard

Version 2.0 - 2018-04-13
* FEA#8429 Add rule engine functions to identify subscribed coverages
* FEA#8383 Use contact mechanisms and party identifiers in the brouillard
* BUG#8027 Search for possible insured person should be based on anyone related to that person by a contract
* BUG#7897 Better management of activatde modules for "brouillard" default template

Version 1.14 - 2017-11-09
* BUG#2982: Check that a party has not been added more than once as a covered element on the contract
* FEA#7439 Possibility to disable extra premiums / exclusions per coverage
* BUG#5664 Fix checks methods on contract options and covered elements extra datas
* FEA#7024 Configure default reports templates to be added as default letters in coog
* BUG#7132 Migrate function which set the contract subscriber covered as covered element from contract_life_process
* BUG#7029 Fix default initialization of contract options
* BUG#6757 Fix covered element start date calculation
* OTH#0000 Fix missing [] in Or clause (iteration on 6468)
* BUG#6468 Compute option start date using the manual_start_date on covered element if it is defined

Version 1.12 - 2017-04-28
* FEA#0000 Add a contract field with the number of sub covered elements when the contract started

Version 1.10 - 2016-11-02
* FEA#0000 Add relate on party to display enrollments
* FEA#0000 Make the extra premium wizard directly available on the contract
* FEA#0000 Create future extra premiums right from the creation wizard

Version 1.8 - 2016-07-06

Version 1.6 - 2015-12-23
* FEA#0000 Add versioned part on covered_elements
* FEA#0000 Move extra_data of contract.option in contract module

Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22
* FEA#0000 Manage flat extra_premium

Version 1.2 - 2014-07-01