@@ -1,3 +1,4 @@
+* BUG#9127 Suppression du statut readonly pour les champs des sous-éléments couverts
 * FEA#8832 Remplacer l'attribut position 'hpaned' par 'group'
 * BUG#9046 Ne pas copier les données complémentaires des éléments couverts sur les tiers si elles sont non renseignées
 * BUG#8956 Afficher le numéro de devis au lieu du numéro de contrat pour les devis dans le message d'erreur d'effacement de tiers
